# netx

./: CMakeLists.txt  README.md  main.c  netx.c  netx.h  netx_uart.c  netx_uart.h
linux/: CMakeLists.txt  netx_tcp.c  netx_tcp.h  netx_uart.c  netx_uart.h  netx_udp.c  netx_udp.h
linux/common/: common.c  common.h
tools/: tcp_echo_server.js
